syntax = "proto3";
import public "SocketCommon.proto";

package tigeropen.push.pb;


message QuoteBBOData {

  string symbol = 1;
  SocketCommon.QuoteType type = 2; // BBO
  uint64 timestamp = 3;

  double askPrice = 17;
  sint64 askSize = 18;
  uint64 askTimestamp = 19; // Pre/Post-Mkt data not support
  double bidPrice = 20;
  sint64 bidSize = 21;
  uint64 bidTimestamp = 22; // Pre/Post-Mkt data not support

}