syntax = "proto3";

package tigeropen.push.pb;

message StockTopData {
  string market = 1;
  int64 timestamp = 2;
  repeated TopData topData = 3;

  message TopData {
    string targetName = 1; // changeRate, changeRate5Min, turnoverRate, amount, volume, amplitude
    repeated StockItem item = 2;
  }

  message StockItem {
    string symbol = 1;
    double latestPrice = 2;
    double targetValue = 3;
  }
}
